--- a/Samples/MessagingSample/MessagingSample/MainPage.xaml
+++ b/Samples/MessagingSample/MessagingSample/MainPage.xaml
@@ -8,19 +8,26 @@
     <Grid.RowDefinitions>
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="Auto"/>
+      <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
 
-    <Label Grid.Row="0"
-           Text="CrossPlatformLibrary.Messaging"
-           FontSize="24"
-           VerticalOptions="Start"
-           HorizontalOptions="StartAndExpand" />
-
-    <Button Grid.Row="1"
-            Text="Send Mail"
+    <Button Grid.Row="0"
+            Text="Send EMail"
             Clicked="ButtonSendMail"
             VerticalOptions="Start"
             HorizontalOptions="StartAndExpand"/>
+
+    <Button Grid.Row="1"
+           Text="Send Sms"
+           Clicked="ButtonSendSms"
+           VerticalOptions="Start"
+           HorizontalOptions="StartAndExpand"/>
+
+    <Button Grid.Row="2"
+           Text="Call"
+           Clicked="ButtonPhoneCall"
+           VerticalOptions="Start"
+           HorizontalOptions="StartAndExpand"/>
   </Grid>
 
 </ContentPage>
