--- a/Samples/MessagingSample/MessagingSample/MainPage.xaml
+++ b/Samples/MessagingSample/MessagingSample/MainPage.xaml
@@ -11,23 +11,29 @@
       <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
 
-    <Button Grid.Row="0"
-            Text="Send EMail"
-            Clicked="ButtonSendMail"
-            VerticalOptions="Start"
-            HorizontalOptions="StartAndExpand"/>
+    <Button
+      x:Name="ButtonSendMail"
+      Grid.Row="0"
+      Text="Send EMail"
+      Clicked="OnButtonSendMailClicked"
+      VerticalOptions="Start"
+      HorizontalOptions="StartAndExpand"/>
 
-    <Button Grid.Row="1"
-           Text="Send Sms"
-           Clicked="ButtonSendSms"
-           VerticalOptions="Start"
-           HorizontalOptions="StartAndExpand"/>
+    <Button 
+      x:Name="ButtonSendSms"
+      Grid.Row="1"
+      Text="Send Sms"
+      Clicked="OnButtonSendSmsClicked"
+      VerticalOptions="Start"
+      HorizontalOptions="StartAndExpand"/>
 
-    <Button Grid.Row="2"
-           Text="Call"
-           Clicked="ButtonPhoneCall"
-           VerticalOptions="Start"
-           HorizontalOptions="StartAndExpand"/>
+    <Button 
+      x:Name="ButtonPhoneCall"
+      Grid.Row="2"
+      Text="Call"
+      Clicked="OnButtonPhoneCallClicked"
+      VerticalOptions="Start"
+      HorizontalOptions="StartAndExpand"/>
   </Grid>
 
 </ContentPage>
